--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "bootstrap": "^5.3.2",
+    "date-fns": "^2.30.0",
     "ngx-toastr": "^17.0.2",
     "primeicons": "^6.0.1",
     "primeng": "^16.3.1",
